--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,11 @@
           <%= f.input :last_name, required: false, autofocus: true, label: "Nom" %>
           <%= f.input :phone_number, required: false, autofocus: true, label: "Numéro de téléphone" %>
           <%= f.input :email, required: true, autofocus: true %>
-
+          <%= f.input :owner,
+                      :as => :select,
+                      :collection => [['Je cherche un espace de travail',false],['Je propose un espace de travail',true]],
+                      :include_blank => false,
+                      :label => "Merci de préciser l'objet de votre inscription" %>
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
           <% end %>
