--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,8 @@
           <%= f.input :owner,
                       :as => :select,
                       :collection => [['Je cherche un espace de travail',false],['Je propose un espace de travail',true]],
-                      :include_blank => false,
+                      :include_blank => true,
+                      :required => true,
                       :label => "Merci de préciser l'objet de votre inscription" %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), label: "Mot de passe" %>
           <%= f.input :password_confirmation, required: true, label: "Confirmation du mot de passe" %>
