--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,8 @@
 .footer-links {
   font-family: $body-font;
-  font-size: 10px;
+  font-size: 150px;
   color: $my-white;
+
 }
 
 
@@ -9,6 +10,13 @@
 .home-footer {
   background: $my-gray;
   height: auto;
+  // remove of any trouble
+  position: relative;
+  z-index: -4;
+  @media(max-width: $screen-sm) {
+    text-align: center;
+  }
+  //
   p {
     font-size: 10px;
     color: $my-white;
@@ -32,5 +40,12 @@
   margin-top: 20px;
 }
 
-
+// #footer {
+//   background:#ffab62;
+//   width:100%;
+//   height:100px;
+//   position:absolute;
+//   bottom:0;
+//   left:0;
+// }
 
