--- a/app/assets/stylesheets/shared/_all_pages.scss
+++ b/app/assets/stylesheets/shared/_all_pages.scss
@@ -1,9 +1,13 @@
 .wrapper-pages {
-  height: 100vh;
+  min-height: 100vh;
+  // position:relative;
 }
 
-body {
+body, html {
  background-color: $my-white;
+ height:100%;
+ margin:0;
+ padding:0;
 }
 
 .row {
@@ -17,3 +21,5 @@ body {
   padding-left: 0px;
   padding-right: 0px;
 }
+
+
