--- a/app/views/demands/edit.html.erb
+++ b/app/views/demands/edit.html.erb
@@ -76,11 +76,18 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-xs-12">
-            <%= f.input :move_in_date, label: "A quelle date souhaitez-vous vous installer dans vos nouveaux bureaux ?", placeholder: "DD/MM/YYYY", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
-            </div>
+        <h2>Votre calendrier</h2>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+          <div id="edit_demand"  class="input-group date">
+          <%= f.input :move_in_date, class: "form-control", label: "Date d'installation", placeholder: "JJ/MM/AAAA", error: "Merci de remplir ce champs pour valider le formulaire" %>
           </div>
+            <%= f.hint "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
+          </div>
+          <div class="col-xs-12 col-md-6">
+          <%= f.input :duration, label: "Durée en mois", required: true, hint: "La durée permet aux propriétaires de vous faire une propsition personnalisée" %>
+        </div>
+        </div>
           <h2>Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?</h2>
           <div class="row">
             <div class="col-xs-12">
