--- a/app/views/demands/new.html.erb
+++ b/app/views/demands/new.html.erb
@@ -71,15 +71,17 @@
             </div>
           </div>
         </div>
-        <h2>A quelle date souhaitez-vous vous installer ?</h2>
+        <h2>Votre calendrier</h2>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6">
           <div id="new_demand"  class="input-group date">
-            <input type="text" class="form-control" name="move_in_date"><span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+          <%= f.input :move_in_date, class: "form-control", label: "Date d'installation", placeholder: "JJ/MM/AAAA", error: "Merci de remplir ce champs pour valider le formulaire" %>
           </div>
-          <%#= f.input :move_in_date, %>
-          <%#= f.text_field :move_in_date, data:{ provide:'datepicker', label: "A quelle date souhaitez-vous vous installer dans vos nouveaux bureaux ?", placeholder: "DD/MM/YYYY", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." } %>
+            <%= f.hint "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
           </div>
+          <div class="col-xs-12 col-md-6">
+          <%= f.input :duration, label: "Durée en mois", required: true, hint: "La durée permet aux propriétaires de vous faire une propsition personnalisée" %>
+        </div>
         </div>
         <h2>Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?</h2>
         <div class="row">
