--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,14 +8,15 @@
         <%= f.error_notification %>
 
         <div class="form-inputs">
-        <%= f.input :first_name, required: false, autofocus: true, label: "Prénom" %>
-          <%= f.input :last_name, required: false, autofocus: true, label: "Nom" %>
-          <%= f.input :phone_number, required: false, autofocus: true, label: "Numéro de téléphone" %>
+        <%= f.input :first_name, required: true, autofocus: true, label: "Prénom" %>
+          <%= f.input :last_name, required: true, autofocus: true, label: "Nom" %>
+          <%= f.input :phone_number, required: true, autofocus: true, label: "Numéro de téléphone" %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :owner,
                       :as => :select,
                       :collection => [['Je cherche un espace de travail',false],['Je propose un espace de travail',true]],
-                      :include_blank => false,
+                      :include_blank => true,
+                      :required => true,
                       :label => "Merci de préciser l'objet de votre inscription" %>
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -23,7 +24,7 @@
 
           <%= f.input :password, autocomplete: "off", label: "Mot de passe", hint: "Laissez blanc si vous ne souhaitez pas changer votre mot de passe", required: false %>
           <%= f.input :password_confirmation, label: "Confirmez votre mot de passe", required: false %>
-          <%#= f.input :current_password, label: "Mot de passe actuel", hint: "Nous avons besoin de votre mot de passe actuel pour procéder aux modifications", required: false %>
+          <%= f.input :current_password, label: "Mot de passe actuel", hint: "Nous avons besoin de votre mot de passe actuel pour procéder aux modifications", required: false %>
         </div>
 
         <div class="form-actions">
