--- a/app/views/users/_brief_if_user_not_owner.html.erb
+++ b/app/views/users/_brief_if_user_not_owner.html.erb
@@ -1,43 +1,17 @@
- <!-- liste de demandes pour le owner ? -->
-<% current_user.coworkings.each do |coworking| %>
-<% coworking.briefs.each do |brief| %>
-<div class="product">
-  <div class="container">
-    <div class="row">
-        <p class="text-center" style="font-size: 10px">Reçue le <%= brief.created_at.strftime("%-d-%-m-%Y") %></p>
-      <div class="col-xs-12 col-md-2">
-        <% avatar_url = current_user.facebook_picture_url || "TREJhome.png" %>
-        <%= image_tag avatar_url, class: "product-image" %>
-      </div>
-      <div class="col-xs-12 col-md-7">
-        <div class='product-body'>
-          <h3><%= brief.company_name %></h3>
-          <p><%= brief.user.first_name %> <%= brief.user.last_name.first(1) %>. vous a envoyé une demande de devis pour :</p>
-          <p><strong><%= brief.coworking.name %> - <%= brief.coworking.address %></strong></p>
-        </div>
-      </div>
-      <div class="col-xs-12 col-md-3">
-        <ul class="list-inline product-controls">
-          <li>
-            <!-- bouton d'ouverture de la modal user n'est pas owner  -->
+    <% current_user.briefs.each do |brief| %>
+      <div class="col-xs-12 col-md-4">
+        <div class="card-dashboard-demand text-center">
+        <i>Dernière mise à jour le <%= brief.updated_at.strftime("%-d-%-m-%Y") %></i>
+          <%= cl_image_tag brief.coworking.photos.first.path, width: 300, crop: :scale, class: "img-responsive center-block" %>
+          <div class="card-block">
+            <h4 class="card-title"><%= brief.coworking.name %></h4>
+            <p class="card-text"><%= brief.coworking.address %></p>
+<!-- bouton d'ouverture de la modal user n'est pas owner  -->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%= brief.coworking.id %>">
-              Voir
+              Voir ma demande
             </button>
-          </li>
-          <li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%= brief.coworking.id %>">
-              Voir
-            </button>
-          </li>
-          <li><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%= brief.coworking.id %>">
-              Voir
-            </button>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
+          </div>
+        </div>
 <!-- Début du contenue de la modal user n'est pas owner  -->
         <div class="modal fade" id="<%= brief.coworking.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg" role="document">
@@ -46,8 +20,8 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <p class="modal-title" id="exampleModalLabel"><%= brief.company_name %></p>
-                <p>Dernière mise à jour le <%= brief.updated_at.strftime("%-d-%-m-%Y") %></p>
+                <h1 class="modal-title" id="exampleModalLabel"><%= brief.coworking.name %></h1>
+                <i>Dernière mise à jour le <%= brief.updated_at.strftime("%-d-%-m-%Y") %></i>
               </div>
               <div class="modal-body">
                 <div class="briefs-content">
@@ -91,10 +65,11 @@
                   </div>
                   <% end %>
                   <% end %>
-                  <h2>Agenda</h2>
+                  <h2>calendrier</h2>
                   <div class="row">
                     <div class="col-xs-12">
                       <p><strong><%= brief.move_in_date %></strong></p>
+                      <p>Pour une durée de <strong> <%= brief.duration %></strong> mois</p>
                     </div>
                   </div>
                   <% unless brief.other_spec.blank? %>
@@ -105,24 +80,24 @@
                 <div class="modal-footer">
                   <div>
                     <ul class="list-inline">
-                      <li>
-                        <div>
-                        <% if policy(brief).edit? %>
-                          <%= link_to edit_brief_path(brief), method: :get, class: 'form-search-briefs' do %>
-                          <%= submit_tag "MODIFIER", class: "btn btn-primary btn-recall-briefs", style:"text-decoration:none" %>
-                          <% end %>
-                          <% end %>
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                        <% if policy(brief).destroy? %>
-                          <%= link_to brief_path(brief), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer votre recherche ?"}, class: 'form-search-briefs' do %>
-                          <%= submit_tag "SUPPRIMER", class: "btn btn-primary btn-recall-briefs-delete", style:"text-decoration:none" %>
-                          <% end %>
-                          <% end %>
-                        </div>
-                      </li>
+                    <li>
+                      <div>
+                      <% if policy(brief).edit? %>
+                        <%= link_to edit_brief_path(brief), method: :get, class: 'form-search-briefs' do %>
+                        <%= submit_tag "MODIFIER", class: "btn btn-primary btn-recall-briefs", style:"text-decoration:none" %>
+                        <% end %>
+                        <% end %>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                      <% if policy(brief).destroy? %>
+                        <%= link_to brief_path(brief), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer votre recherche ?"}, class: 'form-search-briefs' do %>
+                        <%= submit_tag "SUPPRIMER", class: "btn btn-primary btn-recall-briefs-delete", style:"text-decoration:none" %>
+                        <% end %>
+                        <% end %>
+                      </div>
+                    </li>
                       <li>
                         <button type="button" class="btn btn-primary btn-recall-briefs-delete" data-dismiss="modal">FERMER</button>
                       </li>
@@ -134,5 +109,4 @@
           </div>
         </div>
       </div>
-  <% end %>
 <% end %>
