--- a/app/views/users/_my_propositions.html.erb
+++ b/app/views/users/_my_propositions.html.erb
@@ -1,10 +1,32 @@
-<%# if current_user.briefs.blank? %>
+<!-- User is owner  -->
+<% if current_user.owner %>
+<div class="wrapper-pages">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+        <div class="no-briefs-content">
+          <h1>Vous n'avez pas encore répondu aux demandes</h1>
+          <!-- render form for propositions sent by the user/owner -->
+          <div class="btn-no-brief">
+            <%= link_to new_coworking_path, method: :get, class: 'form-search' do %>
+            <div class="flexbox">
+              <%= submit_tag "PROPOSER UN NOUVEL ESPACE", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+            </div>
+            <% end %>
+          </div>
+          </div>
+    </div>
+  </div>
+</div>
+<% else %>
+<!-- User is not owner  -->
 <div class="wrapper-pages">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
         <div class="no-briefs-content">
           <h1>Vous n'avez pas encore reçu de proposition</h1>
+          <!-- render form fo propositions received by the user/not owner -->
         </div>
         <div class="btn-no-brief">
           <%= link_to root_path, method: :get, class: 'form-search' do %>
@@ -17,5 +39,5 @@
     </div>
   </div>
 </div>
-  <%# else %>
-  <%# end %>
+<% end %>
+
