--- a/app/views/coworkings/new.html.erb
+++ b/app/views/coworkings/new.html.erb
@@ -6,10 +6,10 @@
         <h2>Informations générales</h2>
         <%= simple_form_for(@coworking) do |f| %>
         <div class="row">
-          <div class="col-xs-6">
-            <%= f.input :title, label: "Titre de l'annonce", placeholder: "Coworking Paris 75003", hint: "Nous vous recommandons un titre court décrivant au mieux votre espace" %>
+          <div class="col-xs-12 col-md-6">
+            <%= f.input :title, label: "Titre de l'annonce", placeholder: "Coworking Paris 75003", hint: "Un titre court décrivant au mieux votre espace" %>
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
             <%= f.input :name, label: "Nom de l'espace", placeholder: "Votre marque" %>
           </div>
         </div>
@@ -42,10 +42,10 @@
           <%= f.hint "Les prix seront affichés selon la prestation choisie par le locataire" %>
         </div>
         <div class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
             <%= f.input :surface, label: "Surface", placeholder: "2000", hint: "Nous vous recommandons d'indiquer la surface totale de votre espace" %>
           </div>
-          <div class="col-xs-6">
+          <div class="col-xs-12 col-md-6">
             <%= f.input :workstation_number, label: "Nombre de postes", placeholder: "250", hint: "Nous vous recommandons d'indiquer le nombre total de postes de travail installés" %>
           </div>
         </div>
