--- a/app/views/users/_brief_if_user_is_owner.html.erb
+++ b/app/views/users/_brief_if_user_is_owner.html.erb
@@ -35,28 +35,28 @@
        <div id="brief-content_<%= brief.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= brief.id %>">
          <div class="card-block">
            <!--  -->
-           <div class="container">
             <div class="brief-content">
+           <div class="container">
              <div class="row">
-               <div class="col-xs-12">
+               <!-- <div class="col-xs-12"> -->
                 <% unless brief.coworking.contracts.blank? %>
-                <% brief.coworking.contracts.each do |contract| %>
                 <div class="col-xs-12 col-md-6">
                   <h2>Type de contrat</h2>
+                <% brief.coworking.contracts.each do |contract| %>
                   <p><strong><%= contract.name %></strong></p>
                 </div>
                 <% end %>
                 <% end %>
 
                 <% unless brief.surfaces.blank? %>
-                <% brief.surfaces.each do |surface| %>
                 <div class="col-xs-12 col-md-6">
                   <h2>Type d'espace</h2>
+                <% brief.surfaces.each do |surface| %>
                   <p><strong> <%= surface.name %></strong> - <em><%= surface.space %></em></p>
+                <% end %>
                 </div>
                 <% end %>
-                <% end %>
-
+                  <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h2>Critères de recherche</h2>
                   <p>Nombre de postes de travail : <strong><%= brief.workstation_number %></strong></p>
@@ -72,12 +72,15 @@
                   <p>Durée : <strong> <%= brief.duration %></strong> mois</p>
                 </div>
                 <% unless brief.other_spec.blank? %>
+                </div>
+                <div class="row">
                 <div class="col-xs-12">
                   <h2>Besoins spécifiques</h2>
                   <p><%= brief.other_spec %></p>
                   <% end %>
                 </div>
-              </div>
+                </div>
+              <!-- </div> -->
             </div>
           </div>
         </div>
