--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -70,6 +70,11 @@
           <% end %>
         </li>
         <li>
+          <%= link_to edit_user_registration_path do %>
+          <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+          <% end %>
+        </li>
+        <li>
           <%= link_to dashboard_users_path do %>
           <i class="fa fa-list-alt"></i> <%= t(".sign_in", default: "Tableau de bord") %>
           <% end %>
