--- a/app/views/users/_brief_if_user_is_owner.html.erb
+++ b/app/views/users/_brief_if_user_is_owner.html.erb
@@ -23,7 +23,7 @@
                        </div>
                      </div>
                      <div class="col-xs-12 col-md-2">
-                       <i>Reçue le <%= brief.created_at.strftime("%-d-%-m-%Y") %></i>
+                       <i>Dernière mise à jour le <%= brief.updated_at.strftime("%-d-%-m-%Y") %></i>
                      </div>
                    </div>
                  </div>
