--- a/app/assets/stylesheets/dashboard/_dashboard_list_owner_demands.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard_list_owner_demands.scss
@@ -43,6 +43,13 @@
   width: 70px;
 }
 
+.product-image-demand {
+  border-radius: 10px;
+  // margin-right: 40px;
+  width: 120px;
+  position: relative;
+  right: 60%;
+}
 /* Controls design */
 .product-controls {
   display: flex;
