--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -3,13 +3,13 @@
     <div class="col-xs-12">
 
       <div class="tabs">
-        <a class="tab" data-target="#briefs">
+        <a class="tab active" data-target="#briefs">
           <h3><span><i class="fa fa-paper-plane" aria-hidden="true"></i></span> Demandes</h3>
         </a>
         <a class="tab" data-target="#Propositions">
           <h3><span><i class="fa fa-handshake-o" aria-hidden="true"></i></span> Propositions</h3>
         </a>
-        <a class="tab active" data-target="#messages">
+        <a class="tab" data-target="#messages">
           <h3><span><i class="fa fa-envelope" aria-hidden="true"></i></span> Messages</h3>
         </a>
         <a class="tab" data-target="#demands">
@@ -17,13 +17,13 @@
         </a>
       </div>
 
-      <div class="tab-content hidden" id="briefs">
+      <div class="tab-content" id="briefs">
         <%= render "my_briefs" %>
       </div>
-      <div class="tab-content" id="Propositions">
+      <div class="tab-content hidden" id="Propositions">
         <%= render "my_propositions" %>
       </div>
-      <div class="tab-content" id="messages">
+      <div class="tab-content hidden" id="messages">
         <%= render "my_messages" %>
       </div>
       <div class="tab-content hidden" id="demands">
