--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,9 +1,9 @@
 <% if @message.errors.any? %>
-// handle validation erros later
+  // handle validation errors later
 <% else %>
-  const messagesContainer = document.querySelector('.message');
+  const messagesContainer = document.querySelector('.messages');
   messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message, user_is_messages_author: true %>');
-  const input = document.querySelector('.message-content');
+  const input = document.querySelector('#message_content');
   input.value = '';
   input.blur();
   scrollLastMessageIntoView();
