demands photos aligned

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="tab-content" id="briefs">
-        <%= render "my_briefs" %>
+        <%= render "briefs/my_briefs" %>
       </div>
       <div class="tab-content hidden" id="Propositions">
         <%= render "my_propositions" %>
@@ -27,7 +27,7 @@
         <%= render "my_messages" %>
       </div>
       <div class="tab-content hidden" id="demands">
-        <%= render "my_demands" %>
+        <%= render "demands/my_demands" %>
       </div>
     </div>
   </div>
