--- a/app/views/briefs/_my_briefs.html.erb
+++ b/app/views/briefs/_my_briefs.html.erb
@@ -4,11 +4,11 @@
 <!-- condition owner true or false  -->
     <% unless current_user.owner %>
 <!-- début de l'itération user n'est pas owner  -->
-    <%= render 'brief_if_user_not_owner' %>
+    <%= render 'briefs/brief_if_user_is_not_owner' %>
 <!-- fin du contenu de la modal si user n'est pas owner -->
     <% else %>
 <!-- début de l'itération user est owner  -->
-    <%= render 'brief_if_user_is_owner' %>
+    <%= render 'briefs/brief_if_user_is_owner' %>
 <!-- fin du contenu de la modal si user est owner -->
       <% end %>
 <!-- fin de la condition owner true or false  -->
