--- a/app/views/coworkings/index.html.erb
+++ b/app/views/coworkings/index.html.erb
@@ -29,6 +29,8 @@
         } else if (markers.length == 1) {
           handler.getMap().setZoom(14);
         }
+        // markers
+
       });
     });
   </script>
