--- a/app/assets/stylesheets/coworkings/_coworking-list.scss
+++ b/app/assets/stylesheets/coworkings/_coworking-list.scss
@@ -5,6 +5,37 @@
   height: 100vh;
 }
 
+.container-infowindow {
+  text-align: center;
+}
+
+.map_box {
+  h3 {
+    font-size: 20px;
+    color: #00C29A;
+  }
+  h2 {
+    font-size: 15px;
+  }
+  i {
+    font-size: 8px;
+  }
+}
+
+.btn-infowindow {
+  background-color: $my-green;
+  border-color: $my-green;
+  font-size: 12px;
+  width: auto;
+  position: relative;
+  padding: 15px 25px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-family: $body-font;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+  // border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 // * {
 //     background: #000 !important;
 //     color: #0f0 !important;
