--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -109,7 +109,7 @@
                     </li> -->
                   </ul>
                 </div>
-              <!-- </div> -->
+              </div>
             </div>
           </div>
         </div>
