footer clean in dashboard

--- a/app/assets/stylesheets/dashboard/_dashboard_list_owner_demands.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard_list_owner_demands.scss
@@ -109,6 +109,12 @@
   }
 }
 
+// * {
+//     background: #000 !important;
+//     color: #0f0 !important;
+//     outline: solid #f00 1px !important;
+// }
+
 
 
 
