--- a/app/views/coworkings/show.html.erb
+++ b/app/views/coworkings/show.html.erb
@@ -4,95 +4,9 @@
     <div class="col-xs-12 col-sm-4 col-md-3">
       <div class="box-infos-price">
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-brief">Demander une proposition</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#create-brief">Demander un devis</button>
         <!-- Modal -->
-        <div class="modal fade" id="create-brief" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-                <h5 class="modal-title" id="create-brief">Demande de proposition pour <%= @coworking.name.upcase %> - <%= @coworking.address %> <%= @coworking.city %> <%= @coworking.zip_code %></h5>
-                <p><em>Voux pourrez retrouver votre demande dans votre tableau de bord</em></p>
-              </div>
-              <div class="modal-body">
-                <div class="form-demand-new">
-                  <%= simple_form_for([@coworking,@brief]) do |f| %>
-                  <h2>Quels est le nom de votre société ?</h2>
-                  <%= f.input :company_name, placeholder: "Ma société", label: false, error: "Merci de remplir ce champs pour valider le formulaire" %>
-                  <h2>Type de contrat</h2>
-                  <div class="form-group">
-                    <input type="hidden" name="coworking[contract_ids][]" value="">
-                    <div class="checkbox-choices">
-                      <% @coworking.contracts.each do |contract| %>
-                      <input type="checkbox" class="hidden" value="<%= contract.id %>" name="coworking[contract_ids][]" id="coworking_contract_ids_<%= contract.id %>">
-                      <label class="checkbox-choice" for="coworking_contract_ids_<%= contract.id %>">
-                        <%= contract.name %>
-                      </label>
-                      <% end %>
-                    </div>
-                  </div>
-                  <h2>Informations générales</h2>
-                  <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                      <%= f.input :surface, label: "Surface", error: "Merci de remplir ce champs pour valider le formulaire", placeholder: "500", hint: "La surface SUBL (Surface Utile Brute Locative) représente l'espace comprenant les postes de travail, les salles de réunions, les espaces communs, etc.)." %>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                      <%= f.input :workstation_number, label: "Nombre de postes de travail", placeholder: "35", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Un poste de travail représente le bureau d'un collaborateur. Vous pouvez avoir moins de postes que le nombre d'employés (dans le cas d'une politique de bureaux non attribués par exemple)." %>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                      <%= f.input :meeting_room_number, label: "Nombre de salles de réunion", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal, nous ajusterons par la suite la taille des salles dont vous avez besoin pour organiser vos réunions. Ou laissez blanc si vous n'en avez pas besoin." %>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                      <%= f.input :parking_number, label: "Nombre de parking", placeholder: "3", error: "Merci de remplir ce champs pour valider le formulaire", hint: "Indiquez simplement le nombre idéal ou laissez blanc si vous n'en avez pas l'utilité." %>
-                    </div>
-                  </div>
-                  <h2>Type de surface recherché</h2>
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <div class="form-group">
-                        <input type="hidden" name="brief[surface_ids][]" value="">
-                        <div class="checkbox-choices">
-                          <% Surface.all.each do |surface| %>
-                          <input type="checkbox" class="hidden" value="<%= surface.id %>" name="brief[surface_ids][]" id="brief_surface_ids_<%= surface.id %>">
-                          <label class="checkbox-choice" for="brief_surface_ids_<%= surface.id %>">
-                            <%= surface.name %>
-                          </label>
-                          <% end %>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <h2>Votre calendrier</h2>
-                  <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                    <div id="new_brief"  class="input-group date">
-                    <%= f.input :move_in_date, class: "form-control", label: "Date d'installation", placeholder: "JJ/MM/AAAA", error: "Merci de remplir ce champs pour valider le formulaire" %>
-                    </div>
-                      <%= f.hint "Indiquez simplement la date à laquelle vous souhaitez pouvoir commencer à travailler. Nous prendrons en compte des périodes d'aménagement si nécessaire)." %>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                    <%= f.input :duration, label: "Durée en mois", required: true, hint: "La durée permet aux propriétaires de vous faire une propsition personnalisée" %>
-                  </div>
-                  </div>
-                  <h2>Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?</h2>
-                  <div class="row">
-                    <div class="col-xs-12">
-                      <%= f.input :other_spec, label: false, hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <%= f.submit "Envoyer mon cahier des charges", class: "btn btn-primary btn-block" %>
-              </div>
-              <% end %>
-            </div>
-          </div>
-        </div>
+        <%= render 'briefs/new_brief' %>
         <div class="row">
           <div class="col-xs-12">
             <h3 class="highlight-price">Tarifs</h3>
