--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -9,8 +9,8 @@
         <a class="tab" data-target="#Propositions">
           <h3><span><i class="fa fa-handshake-o" aria-hidden="true"></i></span> Propositions</h3>
         </a>
-        <a class="tab" data-target="#messages">
-          <h3><span><i class="fa fa-envelope" aria-hidden="true"></i></span> Messages</h3>
+        <a class="tab" data-target="#chat_rooms">
+          <h3><span><i class="fa fa-comments" aria-hidden="true"></i></span> Messages</h3>
         </a>
         <a class="tab" data-target="#demands">
           <h3><span><i class="fa fa-folder-open" aria-hidden="true"></i></span> Critères</h3>
@@ -23,12 +23,14 @@
       <div class="tab-content hidden" id="Propositions">
         <%= render "my_propositions" %>
       </div>
-      <div class="tab-content hidden" id="messages">
-        <%= render "my_messages" %>
+      <div class="tab-content hidden" id="chat_rooms">
+        <%= render "my_chat_rooms" %>
       </div>
+      <%# unless current_user.owner %>
       <div class="tab-content hidden" id="demands">
         <%= render "demands/my_demands" %>
       </div>
+      <%# end %>
     </div>
   </div>
 </div>
