--- a/app/views/briefs/edit.html.erb
+++ b/app/views/briefs/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container demand-container">
-  <div class="raw">
+  <div class="row">
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <div class="form-demand-new">
         <%= simple_form_for([@coworking, @brief]) do |f| %>
@@ -73,5 +73,4 @@
       </div>
     </div>
   </div>
-</div>
 </div>
