--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -11,7 +11,7 @@
                 <div class="row">
                   <div class="col-xs-12">
                    <div class="col-xs-12 col-md-2">
-                      <% avatar_url = current_user.facebook_picture_url || "TREJhome.png" %>
+                      <% avatar_url = brief.user.facebook_picture_url || "TREJhome.png" %>
                       <%= image_tag avatar_url, class: "product-image" %>
                     </div>
                     <div class="col-xs-12 col-md-8">
@@ -105,5 +105,6 @@
 </div>
 </div>
 </div>
+<!-- last div row 107 user is owner -->
 <% end %>
 <% end %>
