--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <!-- Links when logged in -->
     <%= link_to "Recherche spécifique", new_demand_path, class: "navbar-wagon-item-demand navbar-wagon-link-demand tooltips", title: "", data: { toggle: "tooltip", placement: "bottom", original_title: "Vous êtes un grand groupe ou une startup, décrivez en quelques minutes vos besoins, nous vous accompagnons dans votre projet"}  %>
     <%= link_to "Tableau de bord", dashboard_users_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <%#= link_to "Rechercher", coworkings_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Messagerie", mailbox_inbox_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%#= link_to "Contact", pages_contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "Proposer un espace", new_coworking_path, class: "navbar-wagon-item-coworking navbar-wagon-link-coworking tooltips", title: "", data: { toggle: "tooltip", placement: "bottom", original_title: "Publiez une annonce en quelques minutes et recevez des demandes qualifiées de startups et grands groupes"}  %>
 
