--- a/app/views/demand_mailer/destroy_confirmation.html.erb
+++ b/app/views/demand_mailer/destroy_confirmation.html.erb
@@ -6,7 +6,7 @@
 
 <%= link_to "The Real Estate Jungle", root_url %>
 
-<p>Merci de la confiance que vous nous avez témoignée :)</p>
+<p>Merci de la confiance que vous nous avez témoignée.</p>
 
 <p>N'hésitez à nous rendre visite ou à nous contacter si besoin.</p>
 
