--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -81,7 +81,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to dashboard_users_path do %>
+          <%= link_to mailbox_inbox_path do %>
           <i class="fa fa-envelope"></i> <%= t(".sign_in", default: "Mes messages") %>
           <% end %>
         </li>
