--- a/app/views/demand_mailer/modification_confirmation.html.erb
+++ b/app/views/demand_mailer/modification_confirmation.html.erb
@@ -1,10 +1,10 @@
 <p>Bonjour <%= @demand.user.first_name %>,</p>
 <p>Vous avez modifié votre cahier des charges. Nos équipes prennent en compte les changements.</p>
 <p>Nous vous contacterons très rapidement à l'adresse suivante <b><%= @demand.user.email %></b>.</p>
-<p>Rendez-vous sur la page de votre cahier des charges en suivant le lien suivant:</p>
-<%= link_to "voir ma demande", demand_url(@demand) %>
-<p>Merci de la confiance que vous nous témoignez :)</p>
-<p>Au plaisir de vous revoir bientôt pour faire avancer votre projet immobilier.</p>
+<p>Retrouvez votre demande dans votre tableau de bord en suivant le lien suivant:</p>
+<%= link_to "voir ma demande", users_dashboard_url %>
+<p>Merci de la confiance que vous nous témoignez.</p>
+<p>A trés vite pour faire avancer votre projet immobilier.</p>
 <em>Gautier Weigert</em>
 <br>
 <em>Tél: 06 17 98 75 96</em>
