--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -1,25 +1,24 @@
 <div class="row">
   <div class="spacer"></div>
-  <div class="col-md-12">
-    <%= link_to "Compose", new_conversation_path, class: "btn btn-success" %>
-    <div class="spacer"></div>
-  </div>
-
-  <div class="col-md-4">
+  <div class="col-md-3">
     <div class="panel panel-default">
-      <div class="panel-body">
+    <div class="panel-body left">
         <%= render 'mailbox/folders' %>
+        <div class="col-md-12 text-center">
+          <%= link_to "Nouveau message", new_conversation_path, class: "btn btn-success" %>
+          <div class="spacer"></div>
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-9">
     <div class="panel panel-default">
-      <div class="panel-body">
+      <div class="panel-body right">
         <% if is_conversation %>
-          <%= render 'conversations/form' %>
+        <%= render 'conversations/form' %>
         <% else %>
-          <%= render partial: 'conversations/conversation', collection: messages %>
+        <%= render partial: 'conversations/conversation', collection: messages %>
         <% end %>
       </div>
     </div>
