--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,9 +1,11 @@
 <p>Bonjour <%= @user.first_name %>,</p>
 <p>Bienvenue dans la jungle immobilière.</p>
+<p>Vous pouvez commencer à rechercher les espaces de travail flexibles sur notre site en cliquanr sur le lien suivant :</p>
+<%= link_to "Rechercher mes nouveaux bureaux", root_url %>
 <p>Vous pouvez dès à présent partager avec nous votre recherche immobilière en cliquant sur le lien ci-dessous :</p>
 <%= link_to "Décrivez-nous vos besoins immobiliers", new_demand_url %>
-<p>Merci pour votre inscription et la confiance que vous nous témoignez :)</p>
-<p>Nous restons disponibles pour toute information complémentaire, n'hésitez pas à nous passer un coup de fil ou nous envoyer un email.</p>
+<p>Merci pour votre inscription et la confiance que vous nous témoignez.</p>
+<p>Nous restons disponibles pour toute information complémentaire, n'hésitez pas à nous contacter par emaim ou par téléphone.</p>
 <p>Au plaisir de vous rencontrer bientôt pour faire avancer vos projets immobiliers.</p>
 <em>Gautier Weigert</em>
 <br>
@@ -14,5 +16,4 @@
 <em>Email: gautier@therealestatejungle.fr</em>
 <br>
 <br>
-<%= image_url("TREJhome.png", width: 50) %>
 
