mailbox fine tuning

--- a/app/assets/stylesheets/mailerbox/_mail_box.scss
+++ b/app/assets/stylesheets/mailerbox/_mail_box.scss
@@ -21,6 +21,17 @@
       color: $my-light-gray;
     }
   }
+  textarea.form-control {
+    height: auto;
+    font-size: 15px;
+  }
+}
+
+.panel-footer{
+  textarea.form-control {
+    height: auto;
+    font-size: 15px;
+  }
 }
 
 
