--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -25,7 +25,7 @@
         <%= render "briefs/my_briefs" %>
       </div>
       <div class="tab-content hidden" id="Propositions">
-        <%= render "my_propositions" %>
+        <%= render "propositions/my_propositions" %>
       </div>
       <% unless current_user.owner %>
       <div class="tab-content hidden" id="demands">
