--- a/app/views/briefs/_brief_if_user_is_not_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_not_owner.html.erb
@@ -21,6 +21,7 @@
                      </div>
                      <div class="col-xs-12 col-md-2">
                        <i>Dernière mise à jour le <%= brief.updated_at.strftime("%-d-%-m-%Y") %></i>
+                       <p><%= brief.status %></p>
                      </div>
                    </div>
                  </div>
