proposition create method ok

--- a/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
@@ -22,6 +22,7 @@
                    </div>
                    <div class="col-xs-12 col-md-2">
                      <i>Dernière mise à jour le <%= proposition.updated_at.strftime("%-d-%-m-%Y") %></i>
+                      <p><%= proposition.status %></p>
                    </div>
                  </div>
                </div>
