--- a/app/views/propositions/edit.html.erb
+++ b/app/views/propositions/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
       <div class="form-proposition-new">
-      <h1>Créez votre proposition personnalisée</h1>
+      <h1>Mise à jour de votre proposition personnalisée</h1>
       <p>Merci d'indiquer les prix Hors TVA</p>
         <%= simple_form_for([@brief, @proposition]) do |f| %>
         <h2>Désignation des locaux</h2>
