--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -23,6 +23,9 @@
                      </div>
                     <div class="col-xs-12 col-md-2">
                        <i>Dernière mise à jour le <%= brief.updated_at.strftime("%-d-%-m-%Y") %></i>
+                       <br>
+                       <br>
+                       <span class="badge badge-default"><%= brief.status %></span>
                     </div>
                   </div>
                 </div>
@@ -86,11 +89,11 @@
                   <% end %>
                   </li>
                   <li>
-                    <% if policy(coworking).destroy? %>
-                    <%= link_to brief_path(brief), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer votre recherche ?"}, class: 'form-search-briefs',title: "", data: { toggle: "tooltip", placement: "right", original_title: "Le demandeur sera informé par mail"} do %>
+
+                    <%= link_to decline_brief_path(brief), method: :post, data: { confirm: "Êtes-vous sûr de vouloir décliner cette demande ?"}, class: 'form-search-briefs',title: "", data: { toggle: "tooltip", placement: "right", original_title: "Le demandeur sera informé par mail"} do %>
                     <%= submit_tag "PAS DE DISPONIBILITE", class: "btn btn-primary btn-recall-briefs-delete", style:"text-decoration:none" %>
                     <% end %>
-                    <% end %>
+
                   </li>
                 </ul>
               </div>
