--- a/app/views/propositions/_my_propositions.html.erb
+++ b/app/views/propositions/_my_propositions.html.erb
@@ -5,11 +5,11 @@
     <% unless current_user.owner %>
 <!-- début de l'itération user n'est pas owner  -->
     <%= render 'propositions/proposition_if_user_is_not_owner' %>
-<!-- fin du contenu de la modal si user n'est pas owner -->
+<!-- fin du contenu du collapse si user n'est pas owner -->
     <% else %>
 <!-- début de l'itération user est owner  -->
     <%= render 'propositions/proposition_if_user_is_owner' %>
-<!-- fin du contenu de la modal si user est owner -->
+<!-- fin du contenu du collapse si user est owner -->
       <% end %>
 <!-- fin de la condition owner true or false  -->
     </div>
