--- a/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
@@ -22,7 +22,9 @@
                    </div>
                    <div class="col-xs-12 col-md-2">
                      <i>Dernière mise à jour le <%= proposition.updated_at.strftime("%-d-%-m-%Y") %></i>
-                      <p><%= proposition.status %></p>
+                      <br>
+                      <br>
+                       <span class="badge badge-default"><%= proposition.status %></span>
                    </div>
                  </div>
                </div>
@@ -92,8 +94,8 @@
                        <div class="row">
                         <div class="col-xs-6">
 
-                        <%= link_to edit_brief_proposition_path(brief, proposition), method: :get, class: 'form-search-briefs' do %>
-                          <%= submit_tag "MODIFIER", class: "btn btn-primary btn-recall-propositions", style:"text-decoration:none" %>
+                        <%= link_to accept_brief_proposition_path(brief, proposition), method: :post, data: { confirm: "Êtes-vous sûr de vouloir accepeter la proposition proposition ?"}, class: 'form-search-briefs' do %>
+                          <%= submit_tag "ACCEPTER", class: "btn btn-primary btn-recall-propositions", style:"text-decoration:none" %>
                           <% end %>
 
                         </div>
@@ -103,8 +105,8 @@
                       <div class="row">
                         <div class="col-xs-6">
 
-                          <%= link_to brief_proposition_path(brief, proposition), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer votre proposition ?"}, class: 'form-search-briefs' do %>
-                          <%= submit_tag "SUPPRIMER", class: "btn btn-primary btn-recall-propositions-delete", style:"text-decoration:none" %>
+                          <%= link_to decline_brief_proposition_path(brief, proposition), method: :post, data: { confirm: "Êtes-vous sûr de vouloir décliner la proposition proposition ?"}, class: 'form-search-briefs' do %>
+                          <%= submit_tag "DECLINER", class: "btn btn-primary btn-recall-propositions-delete", style:"text-decoration:none" %>
                           <% end %>
 
                         </div>
