--- a/app/assets/stylesheets/propositions/_proposition.scss
+++ b/app/assets/stylesheets/propositions/_proposition.scss
@@ -29,6 +29,7 @@
   padding: 30px;
   margin-top: -5px;
   margin-bottom: 20px;
+  border: 1px lightgrey solid;
   background-color: $my-white;
   letter-spacing: 1px;
   text-align: justify;
@@ -41,11 +42,14 @@
     color: $my-green;
     font-family: $body-font;
     font-size: 18px;
+    // border-bottom: 1px $my-green solid;
+    text-decoration: underline;
   }
   h3 {
     color: $my-gray;
     font-family: $body-font;
     font-size: 15px;
+    text-decoration: underline;
   }
   p {
     color: $my-light-gray;
