--- a/app/views/briefs/_brief_if_user_is_not_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_not_owner.html.erb
@@ -39,7 +39,7 @@
              <div class="container">
                <div class="row">
                  <!-- <div class="col-xs-12"> -->
-                 <% unless brief.coworking.contracts.blank? %>
+                 <% unless brief.contracts.blank? %>
                  <div class="col-xs-12 col-md-6">
                   <h2>Type de contrat</h2>
                   <% brief.contracts.each do |contract| %>
