--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -11,7 +11,7 @@
                 <div class="row">
                   <div class="col-xs-12">
                    <div class="col-xs-12 col-md-2">
-                      <% avatar_url = brief.user.facebook_picture_url || "TREJhome.png" %>
+                      <% avatar_url = brief.user.facebook_picture_url || "default-avatar.jpg" %>
                       <%= image_tag avatar_url, class: "product-image" %>
                     </div>
                     <div class="col-xs-12 col-md-8">
@@ -42,7 +42,7 @@
                <% unless brief.coworking.contracts.blank? %>
               <div class="col-xs-12 col-md-6">
                 <h2>Type de contrat</h2>
-                <% brief.coworking.contracts.each do |contract| %>
+                <% brief.contracts.each do |contract| %>
                 <p><strong><%= contract.name %></strong></p>
                 <% end %>
               </div>
@@ -103,7 +103,6 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 </div>
 <!-- last div row 107 user is owner -->
