--- a/app/views/propositions/new.html.erb
+++ b/app/views/propositions/new.html.erb
@@ -6,36 +6,96 @@
       <p>Merci d'indiquer les prix Hors TVA</p>
         <%= simple_form_for([@brief,@proposition]) do |f| %>
         <h2>Désignation des locaux</h2>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
         <%= f.input :workstation_number, label: "Nombre de postes de travail" %>
+          </div>
+          <div class="col-xs-12 col-md-6">
         <%= f.input :office_surface, label: "Surface bureaux SUBL en m²" %>
-        <%= f.input :storage_surface, label: "Surface stockage SUBL en m²" %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+        <%= f.input :storage_surface, label: "Surface stockage en m²" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :parking_number, label: "Nombre de parkings" %>
-        <%= f.input :meeting_room_number, label: "Nombre de salles de réunion" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
+        <%= f.input :meeting_room_number, label: "Nbr de salles de réunion" %>
+          </div>
+        </div>
         <h2>Conditions générales</h2>
+        <div class="row">
         <h3>Prix au poste de travail <em>si applicable</em></h3>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :workstation_price_per_month, label: "Au mois" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :workstation_price_per_day, label: "A la journée" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :workstation_price_per_hour, label: "A l'heure" %>
-        <h3>Prix au m²/mois <em>si applicable</em></h3>
+          </div>
+        </div>
+        <div class="row">
+        <h3>Prix au m²/an <em>si applicable</em></h3>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :office_rent_per_sqm, label: "Bureaux HT HC" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :storage_price_per_sqm, label: "Stockage HT HC" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :parking_price_per_unit, label: "Parking/unité HT HC" %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
         <%= f.input :office_charge_per_sqm, label: "Charges" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :office_taxe_per_sqm, label: "Taxes" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :office_teom_per_sqm, label: "TEOM" %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
         <%= f.input :indexation, label: "Indexation" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :deposit, label: "Dépôt de garantie" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
         <%= f.input :fiscal_status, label: "Régime TVA" %>
+          </div>
+        </div>
+        <div class="row">
         <h2>Conditions particulières</h2>
-        <%= f.input :lease_start, label: "Date de début du contrat ou du bail" %>
-        <%= f.input :lease_duration, label: "Durée du contrat ou du bail" %>
-        <%= f.input :mad_start, label: "Date de mise à disposition anticipée" %>
+          <div class="col-xs-12 col-md-4">
+        <%= f.input :lease_start, label: "Date de prise d'effet" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
+        <%= f.input :lease_duration, label: "Durée d'engagement" %>
+          </div>
+          <div class="col-xs-12 col-md-4">
+        <%= f.input :mad_start, label: "Date de MAD" %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
         <%= f.input :free_rent_in_month, label: "Franchise de loyer en nbr de mois HT HC" %>
-        <%= f.input :fitout_allowance_in_month, label: "Accompagnement travaux en nbr de mois HT HC" %>
+          </div>
+          <div class="col-xs-12 col-md-6">
+        <%= f.input :fitout_allowance_in_month, label: "Participation travaux d'aménagement" %>
+          </div>
+        </div>
         <h2>Spécificités</h2>
         <%= f.input :other_spec, label: "Indiquez des précisions si nécessaire" %>
         <div class="modal-footer">
-          <%= f.submit "Envoyer ma proposition", class: "btn btn-primary btn-block" %>
+          <%= f.submit "Envoyer ma proposition", class: "btn btn-primary btn-block", data: { confirm: "Confirmez-vous les informations renseignées dans la proposition ? En appuyant sur annuler vous pourrez revenir au formulaire. Appuyez sur ok pour confirmer."} %>
         </div>
         <% end %>
       </div>
