--- a/app/views/briefs/_my_briefs.html.erb
+++ b/app/views/briefs/_my_briefs.html.erb
@@ -1,17 +1,21 @@
 <!-- <div class="wrapper-pages"> -->
   <div class="container">
     <div class="row">
+      <% unless current_user.owner %>
+      <div class="col-xs-12">
 <!-- condition owner true or false  -->
-    <% unless current_user.owner %>
 <!-- début de l'itération user n'est pas owner  -->
-    <%= render 'briefs/brief_if_user_is_not_owner' %>
+        <%= render 'briefs/brief_if_user_is_not_owner' %>
 <!-- fin du contenu de la modal si user n'est pas owner -->
-    <% else %>
+      </div>
+      <% else %>
+      <div class="col-xs-12">
 <!-- début de l'itération user est owner  -->
-    <%= render 'briefs/brief_if_user_is_owner' %>
+        <%= render 'briefs/brief_if_user_is_owner' %>
 <!-- fin du contenu de la modal si user est owner -->
-      <% end %>
+      </div>
 <!-- fin de la condition owner true or false  -->
+      <% end %>
     </div>
   </div>
 <!-- </div> -->
